# eventlab_new

./: .env  .gitignore  auto-imports.d.ts  components.d.ts  index.html  main.py  package.json  pnpm-lock.yaml  pyproject.toml  shims.d.ts  themeConfig.ts  typed-router.d.ts  vite.config.ts
apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/urls/: auth.py  organizers.py  users.py
apps/cms/: models.py
apps/cms/migrations/: 0001_initial.py
apps/core/: exceptions.py  middleware.py  models.py  permissions.py
apps/events/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/events/migrations/: 0001_initial.py
apps/notifications/: models.py  tasks.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py
apps/orders/: admin.py  models.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py
apps/payments/: models.py  urls.py  views.py
apps/payments/migrations/: 0001_initial.py  0002_deposit_stripe_checkout_url_and_more.py
apps/support/: models.py
apps/support/migrations/: 0001_initial.py
config/: old.settings.py  urls.py
config/settings/: base.py  development.py
src/: App.vue  main.ts
src/components/: AppFooter.vue  AppNavbar.vue  AppThemePalette.vue  TwoFASettings.vue
src/composables/: useApi.ts
src/layouts/: auth.vue  organizer.vue
src/pages/: cart.vue  checkout.vue  home.vue  index.vue  login.vue  login.vue.backup  login.vue.old  register.vue  two-fa-verify.vue
src/stores/: auth.ts  cart.ts
src/utils/: api.ts
(+50 files in other folders)
